@@ -1,7 +1,9 @@
 package com.github.scribejava.apis.examples;
+
 import java.util.Scanner;
 
 import com.github.scribejava.apis.FitbitApi20;
+import com.github.scribejava.apis.fitbit.FitBitOAuth2AccessToken;
 import com.github.scribejava.core.builder.ServiceBuilder;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthRequest;
@@ -9,30 +11,25 @@ import com.github.scribejava.core.model.Response;
 import com.github.scribejava.core.model.Verb;
 import com.github.scribejava.core.oauth.OAuth20Service;
 
-/**
- * Created by hd on 10/09/16.
- */
 public class FitbitApi20Example {
 
     private static final String NETWORK_NAME = "Fitbit";
-    
-    // Replace with user ID to test API against
-    private static final String USER_ID = "your user id";
-    private static final String PROTECTED_RESOURCE_URL = "https://api.fitbit.com/1/user/" + USER_ID + "/profile.json";
 
-  
+    private static final String PROTECTED_RESOURCE_URL = "https://api.fitbit.com/1/user/%s/profile.json";
+
     private FitbitApi20Example() {
     }
 
     public static void main(String... args) throws Exception {
-    	
+
         // Replace these with your client id and secret fron your app
         final String clientId = "your client id";
         final String clientSecret = "your client secret";
         final OAuth20Service service = new ServiceBuilder(clientId)
                 .apiSecret(clientSecret)
                 .scope("activity profile") // replace with desired scope
-                .callback("http://www.example.com/oauth_callback/")  //your callback URL to store and handle the authorization code sent by Fitbit
+                //your callback URL to store and handle the authorization code sent by Fitbit
+                .callback("http://www.example.com/oauth_callback/")
                 .state("some_params")
                 .build(FitbitApi20.instance());
         final Scanner in = new Scanner(System.in);
@@ -53,21 +50,27 @@ public class FitbitApi20Example {
 
         // Trade the Request Token and Verfier for the Access Token
         System.out.println("Trading the Request Token for an Access Token...");
-        final OAuth2AccessToken accessToken = service.getAccessToken(code);
+        final OAuth2AccessToken oauth2AccessToken = service.getAccessToken(code);
         System.out.println("Got the Access Token!");
-        System.out.println("(if your curious it looks like this: " + accessToken
-                + ", 'rawResponse'='" + accessToken.getRawResponse() + "')");
+        System.out.println("(if your curious it looks like this: " + oauth2AccessToken
+                + ", 'rawResponse'='" + oauth2AccessToken.getRawResponse() + "')");
         System.out.println();
 
+        if (!(oauth2AccessToken instanceof FitBitOAuth2AccessToken)) {
+            System.out.println("oauth2AccessToken is not instance of FitBitOAuth2AccessToken. Strange enough. exit.");
+            System.exit(0);
+        }
+
+        final FitBitOAuth2AccessToken accessToken = (FitBitOAuth2AccessToken) oauth2AccessToken;
         // Now let's go and ask for a protected resource!
         // This will get the profile for this user
         System.out.println("Now we're going to access a protected resource...");
 
-        final OAuthRequest request = new OAuthRequest(Verb.GET, PROTECTED_RESOURCE_URL);
+        final OAuthRequest request = new OAuthRequest(Verb.GET,
+                String.format(PROTECTED_RESOURCE_URL, accessToken.getUserId()));
         request.addHeader("x-li-format", "json");
 
-        //add header for authentication (why make it so complicated, Fitbit?)
-        request.addHeader("Authorization", "Bearer " + accessToken.getAccessToken());
+        service.signRequest(accessToken, request);
 
         final Response response = service.execute(request);
         System.out.println();
